--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         "<p>Изготовитель ОС: Vertex Dynamics Corporation</p>" +
         "<p>Имя системы: DESKTOP-V3.0.GA</p>" +
         "<p>Тип: Компьютер на базе x64</p>" +
-        "<p>Папка SpacyOS: C:\\FERMIONOS</p>" +
+        "<p>Папка Fermion: C:\\FERMIONOS</p>" +
         "<p>Системная папка: fermion32</p>" +
         "<p>Язык системы: Русский (Россия)</p>" +
         "<p>Часовой пояс: GMT +3</p>" +
